2005-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.man: Fixed the doctools syntax error in the new text
	  from the last entry.

2005-01-26  David N. Welton  <davidw@dedasys.com>

	* fileutil.man: Added a small note on the measure used to count
	elements in fileutil::stripN.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Introduced a "makeBinaryFile" command to ensure
	  the correct generation of the example files which contain
	  binary. Thanks to Greg Baker <gregb@ifost.org.au> for noticing
	  the problem on his Mac OS X box and helping in debugging it.

2004-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Fixed platform problems in testsuite, bad
	  characters in filenames for Windows.

2004-06-16  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (fileType): Added code to recognize files written
	  in the doctools, doctoc, and docidx documentation formats.

2004-05-30  Aaron Faupell <afaupell@users.sourceforge.net>

	* fileutil.tcl: added tests for dos executables, tar, zip, bmp, wav, and mp3 to fileType
	* fileutil.man: updated to reflect new types for fileType

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Updated version number to sync with 1.6.1
	* fileutil.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Rel. engineering. Updated version number 
	* fileutil.man: of fileutil to reflect its changes, to 1.6.1.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Cleaning up after Aaron. Updated the test